# swish-qr-python

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  qrcodegen.py  requirements-dev.txt  requirements.txt  sample.py  setup.py  svg_templates.py  swish-code.py  tasks.py  tox.ini
.github/workflows/: publish.yml  tests.yml
src/swish_qr/: clear_qr_data.py  cli.py  png.py  qrcodegen.py  svg.py  svg_templates.py  swish_qr.py
swish_qr/: __init__.py  qrcodegen.py  swish_qr.py
tests/: test_cli.py  test_exceptions.py  test_fix_amount.py  test_generate_swish_code.py  test_png.py  test_svg.py
